[package]
name = "mdict"
version = "0.1.0"
authors = ["dwuggh <dwuggh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.3"
# test-env-log = "0.2.5"
dashmap = "4.0.2"
salsa20 = "0.7.2"
ripemd128 = "0.1.2"
adler32 = "1.2.0"
byteorder = "1"
scraper = "0.12.0"
regex = "1"